# laserIMUCalibration

./: .gitignore  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  classes.html  classfilter_1_1_laser_n_a_v_calibration.html  classfilter_1_1_laser_n_a_v_calibration.js  classfilter_1_1_laser_n_a_v_calibration__coll__graph.map  classfilter_1_1_laser_n_a_v_calibration__coll__graph.md5  classfilter_1_1_laser_n_a_v_calibration_a2800d262317e42abf31bb0d48a8beadf_icgraph.map  classfilter_1_1_laser_n_a_v_calibration_a2800d262317e42abf31bb0d48a8beadf_icgraph.md5  classfilter_1_1_laser_n_a_v_calibration_abf8d5ca15824f371e009339dcec5e047_cgraph.map  classfilter_1_1_laser_n_a_v_calibration_abf8d5ca15824f371e009339dcec5e047_cgraph.md5  classfilter_1_1_laser_n_a_v_calibration_ac06ae8f4d4d84aa6b9a1e79fa9900061_icgraph.map  classfilter_1_1_laser_n_a_v_calibration_ac06ae8f4d4d84aa6b9a1e79fa9900061_icgraph.md5  classfilter_1_1_laser_n_a_v_calibration_aed26ad6b12cf877d3d2edf9e482f30bd_cgraph.map  classfilter_1_1_laser_n_a_v_calibration_aed26ad6b12cf877d3d2edf9e482f30bd_cgraph.md5  classfilter_1_1_laser_n_a_v_calibration_aed26ad6b12cf877d3d2edf9e482f30bd_icgraph.map  classfilter_1_1_laser_n_a_v_calibration_aed26ad6b12cf877d3d2edf9e482f30bd_icgraph.md5  files.html  files.js  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  laserNAVCalib.cpp  laserNAVCalib.h  laser_n_a_v_calib_8cpp.html  laser_n_a_v_calib_8cpp.js  (+120 more)
Documentation/: CMakeLists.txt  Doxyfile
documentation/: CMakeLists.txt  Doxyfile  Doxyfile.in
inc/control/: codeManager.h  icp.h
inc/filter/: calibrator.h  noiseTool.h
inc/gui/: visualizer.h
inc/model/: code.h
inc/object/: dataTypes.h
inc/view/: codeList.h  codeSettings.h  documentList.h  fastqda.h  mainWidget.h  visualizer.h
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  (+19 more)
src/: CMakeLists.txt  icp_with_noise.cpp  pcl_icp.cpp  rotationToEuler.cpp
src/control/: goICP.cpp  icp_with_noise.cpp  interactive_icp.cpp  pcd_write.cpp  scan_pcl_visualizer.cpp  statistical_noise_removal.cpp
src/filter/: calibrator.cpp  noiseTool.cpp
src/gui/: visualizer.cpp
src/view/: visualizer.cpp
